# QRCodeCard

./: card_template.py  card_teste.ipynb  cards.py  general.py  main.py  pyproject.toml
